History WebUI: add title for actions menu

Bug: 867065
Change-Id: I05f3b8c4c1f313fa203302a0a27da5b002cedfe0
Reviewed-on: https://chromium-review.googlesource.com/c/1309219
Reviewed-by: calamity <calamity@chromium.org>
Reviewed-by: Hector Carmona <hcarmona@chromium.org>
Commit-Queue: Esmael El-Moslimany <aee@chromium.org>
Cr-Commit-Position: refs/heads/master@{#606334}
Former-commit-id: 569f791a3e829132c9195df2716e746551d1bc29