ui/webui/resources/cr_elements/cr_action_menu/cr_action_menu.js
@@ -157,6 +157,8 @@ Polymer({
       type: Boolean,
       value: false,
     },
+
+    ariaLabel: String,
   },
 
   listeners: {
